# SDL_GAME_struct

./: CMakeLists.txt  README.md  main.cpp
src/: SDL_bgi.h
